# boxdd

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  pages.yml  prebuilt-binaries.yml
bevy_boxdd/: Cargo.toml  README.md
bevy_boxdd/examples/: child_colliders_2d.rs  collision_filter_2d.rs  contact_events_2d.rs  debug_draw_collect_2d.rs  debug_draw_gizmos_2d.rs  falling_box_2d.rs  joint_bridge_2d.rs  kinematic_platform_2d.rs  overlap_query_2d.rs  ray_query_2d.rs  sensor_events_2d.rs
bevy_boxdd/examples/support/: mod.rs
bevy_boxdd/examples/testbed_2d/: control.rs  main.rs  scenes.rs  ui.rs
bevy_boxdd/src/: components.rs  errors.rs  lib.rs  math.rs  messages.rs  plugin.rs  prelude.rs  resources.rs  systems.rs
bevy_boxdd/tests/: plugin.rs
boxdd/: Cargo.toml  README.md
boxdd-sys/: Cargo.toml  README.md  build.rs
boxdd-sys/src/: bindings_pregenerated.rs  ffi.rs  lib.rs
boxdd-sys/tests/: layout.rs
boxdd/examples/: README.md  basic.rs  benchmark.rs  bodies.rs  bridge.rs  buffer_reuse.rs  car.rs  chain_walkway.rs  character_mover.rs  collision_basics.rs  contacts.rs  continuous_bullet.rs  convex_hull.rs  debug_draw.rs  determinism.rs  donut.rs  doohickey.rs  dynamic_tree.rs  events_summary.rs  events_view.rs  issues.rs  joints.rs  joints_presets.rs  kinematic_platform.rs  mint_interop.rs  physics_thread.rs  prismatic_elevator.rs  prismatic_wheel.rs  pyramid.rs  queries.rs  query_casts.rs  raycast.rs  revolute_motor.rs  robustness.rs  scene_serialize.rs  sensors.rs  shapecast.rs  shapes_variety.rs  stacking.rs  testbed_imgui_glow.rs  (+3 more)
boxdd/examples/testbed/: app.rs  debug_draw.rs
boxdd/examples/testbed/scenes/: benchmark.rs  bodies_kinematic.rs  bodies_lab.rs  bodies_set_velocity.rs  breakable_joint.rs  bridge.rs  bullet.rs  car.rs  chain_walkway.rs  character_mover.rs  collision_tools.rs  contacts.rs  continuous_ghost_bumps.rs  continuous_lab.rs  continuous_restitution.rs  convex_hull.rs  determinism.rs  doohickey.rs  events.rs  explosion.rs  issues.rs  joint_separation.rs  joints_lab.rs  manifold.rs  materials.rs  mod.rs  motion_locks.rs  overlap_queries.rs  pinball.rs  pyramid.rs  queries_casts.rs  query_casts.rs  robustness.rs  segment_slide.rs  sensors.rs  shape_distance.rs  shape_editing.rs  shapes.rs  soft_body.rs  stacking.rs  (+3 more)
boxdd/src/: body.rs  collision.rs  contact.rs  debug_draw.rs  dynamic_tree.rs  error.rs  events.rs  filter.rs  lib.rs  prelude.rs  query.rs  serialize.rs  tuning.rs  types.rs  unchecked.rs  world.rs  world_extras.rs
boxdd/src/body/: definition.rs  mod.rs  owned.rs  runtime.rs  scoped.rs
boxdd/src/body/runtime/: attachments.rs  handle.rs  user_data.rs
boxdd/src/core/: box2d_lock.rs  callback_state.rs  debug_checks.rs  ffi_vec.rs  material_mix_registry.rs  math.rs  serialize_registry.rs  user_data.rs  world_core.rs
boxdd/src/events/: body.rs  contact.rs  joint.rs  mod.rs  sensor.rs
boxdd/src/joints/: base.rs  base_def.rs  creation.rs  distance.rs  filter.rs  mod.rs  motor.rs  prismatic.rs  revolute.rs  runtime.rs  runtime_typed.rs  runtime_typed_distance.rs  runtime_typed_motor.rs  runtime_typed_prismatic.rs  runtime_typed_revolute.rs  runtime_typed_weld.rs  runtime_typed_wheel.rs  weld.rs  wheel.rs
boxdd/src/joints/base/: owned.rs  runtime_handle.rs  scoped.rs  user_data.rs
boxdd/src/joints/creation/: builders.rs  validation.rs  world_api.rs
boxdd/src/query/: checked.rs  mod.rs  raw.rs  types.rs  world_api.rs
boxdd/src/query/checked/: common.rs  mover_queries.rs  overlap_queries.rs  ray_queries.rs  shape_casts.rs
boxdd/src/query/world_api/: handle_queries.rs  world_queries.rs
boxdd/src/query/world_api/handle_queries/: mover_queries.rs  overlap_queries.rs  ray_queries.rs  shape_casts.rs
boxdd/src/query/world_api/world_queries/: mover_queries.rs  overlap_queries.rs  ray_queries.rs  shape_casts.rs
boxdd/src/shapes/: chain.rs  creation.rs  definition.rs  geometry.rs  helpers.rs  mod.rs  owned.rs  runtime.rs  scoped.rs
boxdd/src/shapes/geometry/: capsule.rs  chain_segment.rs  circle.rs  polygon.rs  segment.rs
boxdd/src/shapes/runtime/: base.rs  contact_queries.rs  creation.rs  handle.rs  sensor_queries.rs  user_data.rs  validation.rs
boxdd/src/world/: body_api.rs  borrow.rs  creation.rs  definition.rs  handle.rs  metrics.rs  runtime.rs  shape_api.rs  tests.rs
boxdd/src/world/body_api/: control.rs  reads.rs
boxdd/src/world/creation/: body_lifecycle.rs  joint_builders.rs  shape_creation.rs
boxdd/src/world/handle/: body_reads.rs  callback_world.rs  shape_reads.rs  world_reads.rs
boxdd/src/world/runtime/: callbacks.rs  control.rs  reads.rs
boxdd/src/world/shape_api/: control.rs  reads.rs  sensor_queries.rs
boxdd/tests/: api_coverage.rs  body_new_apis.rs  buffer_reuse.rs  bytemuck_api.rs  cgmath_interop.rs  chain_def_soundness.rs  collision_aabb.rs  collision_validation.rs  debug_draw_colors.rs  distance.rs  dynamic_tree.rs  events_and_sensors.rs  ffi_lifecycle.rs  glam_interop.rs  handle_validity_panics.rs  joint_new_apis.rs  joints_compat.rs  manifold_collision.rs  material_mix_callbacks.rs  math.rs  mint_interop.rs  mover_api.rs  nalgebra_interop.rs  panic_across_ffi_is_caught.rs  query_validation.rs  serde_values.rs  serialize_registry_cleanup.rs  serialize_tests.rs  shape.rs  shape_geometry_validation.rs  shape_new_apis.rs  try_api.rs  unchecked_api.rs  user_data.rs  world_and_queries.rs  world_callbacks.rs  world_coverage.rs  world_destroy_and_recycle.rs  world_empty.rs  world_hello.rs
boxdd/tests/fixtures/: api_coverage_symbols.txt
docs/: api-coverage.md
docs/development/: ci.md  ffi-lifetime-audit.md  rustdoc-alignment.md
docs/pages/: index.html
docs/plans/: 2026-07-05-001-boxdd-productization-refactor-plan.md  2026-07-05-001-engineering-platform-plan.md  2026-07-06-001-refactor-api-lifecycle-examples-plan.md  2026-07-06-002-bevy-productization-plan.md  (+1 more)
examples-wasm/: README.md
examples-wasm/provider-smoke/: Cargo.toml
examples-wasm/provider-smoke/src/: lib.rs
tools/: update_submodule_and_bindings.py
xtask/: Cargo.toml
(+116 files in other folders)
