[package]
name = "bevy_boxdd"
version.workspace = true
edition.workspace = true
description = "Bevy integration for the boxdd Rust bindings to Box2D"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/bevy_boxdd"
readme = "README.md"
keywords = ["box2d", "bevy", "physics", "game", "simulation"]
categories = ["game-engines", "api-bindings"]

[features]
default = []

[dependencies]
boxdd.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_math.workspace = true
bevy_time.workspace = true
bevy_transform.workspace = true
log.workspace = true
thiserror.workspace = true

[dev-dependencies]
bevy = "0.19.0"
static_assertions = { workspace = true }

[package.metadata.docs.rs]
all-features = false
no-default-features = false
features = []
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "falling_box_2d"
path = "examples/falling_box_2d.rs"

[[example]]
name = "contact_events_2d"
path = "examples/contact_events_2d.rs"

[[example]]
name = "sensor_events_2d"
path = "examples/sensor_events_2d.rs"

[[example]]
name = "ray_query_2d"
path = "examples/ray_query_2d.rs"

[[example]]
name = "kinematic_platform_2d"
path = "examples/kinematic_platform_2d.rs"

[[example]]
name = "joint_bridge_2d"
path = "examples/joint_bridge_2d.rs"

[[example]]
name = "debug_draw_collect_2d"
path = "examples/debug_draw_collect_2d.rs"

[[example]]
name = "overlap_query_2d"
path = "examples/overlap_query_2d.rs"

[[example]]
name = "debug_draw_gizmos_2d"
path = "examples/debug_draw_gizmos_2d.rs"

[[example]]
name = "child_colliders_2d"
path = "examples/child_colliders_2d.rs"

[[example]]
name = "collision_filter_2d"
path = "examples/collision_filter_2d.rs"
